TP 5 corrections