@@ -56,7 +56,7 @@ public class Stream_03_Test {
 
 		// TODO construire une chaîne contenant les prénoms des clients triés et séparés
 		// par le caractère "|"
-		String result = customers.stream().map(c -> c.getFirstname()).sorted().collect(Collectors.joining("|"));
+		String result = customers.stream().map(c -> c.getFirstname()).sorted().collect(joining("|"));
 
 		assertThat(result, is("Alexandra|Cyril|Johnny|Marion|Sophie"));
 	}
@@ -67,7 +67,7 @@ public class Stream_03_Test {
 		List<Order> orders = new Data().getOrders();
 
 		// TODO Extraire la liste des pizzas de toutes les commandes
-		List<Pizza> result = orders.stream().flatMap(o -> o.getPizzas().stream()).collect(Collectors.toList());
+		List<Pizza> result = orders.stream().flatMap(o -> o.getPizzas().stream()).toList();
 
 		assertThat(result.size(), is(9));
 	}
@@ -78,7 +78,7 @@ public class Stream_03_Test {
 		List<Order> orders = new Data().getOrders();
 
 		// TODO Extraire la liste des différentes pizzas de toutes les commandes
-		List<Pizza> result = orders.stream().flatMap(o -> o.getPizzas().stream()).distinct().collect(Collectors.toList());
+		List<Pizza> result = orders.stream().flatMap(o -> o.getPizzas().stream()).distinct().toList();
 
 		assertThat(result.size(), is(4));
 	}
@@ -89,7 +89,7 @@ public class Stream_03_Test {
 		List<Order> orders = new Data().getOrders();
 
 		// TODO construire une Map <Client, Commandes> effectuées par le client
-		Map<Customer, List<Order>> result = orders.stream().collect(Collectors.groupingBy( o -> o.getCustomer()));
+		Map<Customer, List<Order>> result = orders.stream().collect(groupingBy( o -> o.getCustomer()));
 
 		assertThat(result.size(), is(2));
 		assertThat(result.get(new Customer(1)), hasSize(4));
@@ -103,7 +103,7 @@ public class Stream_03_Test {
 		// TODO Séparer la liste des pizzas en 2 ensembles :
 		// TODO true -> les pizzas dont le nom commence par "L"
 		// TODO false -> les autres
-		Map<Boolean, List<Pizza>> result = pizzas.stream().collect(Collectors.partitioningBy(p -> p.getName().startsWith("L")));
+		Map<Boolean, List<Pizza>> result = pizzas.stream().collect(partitioningBy(p -> p.getName().startsWith("L")));
 
 		assertThat(result.get(true), hasSize(6));
 		assertThat(result.get(false), hasSize(2));
